# devman

./: .bandit  .gitignore  .safety-policy.yml  .secrets.baseline  Dockerfile  README.md  container.nix  devenv.nix  docker-compose.yml  justfile  pyproject.toml
.devman/: devman.toml  devman_config.yml
examples/: complete-workflow.sh
scripts/: bootstrap-devman.sh
src/devman/: __init__.py  cli.py  config.py  copier_engine.py  devman_config.py  exceptions.py  models.py  remote.py  security.py  templater.py  templates.py  validation.py
src/devman/copier_templates/fastapi-api/: pyproject.toml.j2  {% if use_docker %}docker-compose.yml{% endif %}.j2  {% if use_just %}justfile{% endif %}.j2
src/devman/copier_templates/fastapi-api/src/{{ package_name }}/: main.py.j2
src/devman/copier_templates/fastapi-api/tests/: test_health.py.j2
src/devman/copier_templates/python-cli/: copier.yml  pyproject.toml.j2  {% if use_docker %}docker-compose.yml{% endif %}.j2  {% if use_just %}justfile{% endif %}.j2
src/devman/copier_templates/python-cli/src/{{ package_name }}/: cli.py.j2
src/devman/copier_templates/python-cli/tests/: test_cli.py.j2
src/devman/copier_templates/python-lib/: copier.yml  {% if use_docker %}Dockerfile{% endif %}.j2  {% if use_docker %}docker-compose.yml{% endif %}.j2  {% if use_nix %}container.nix{% endif %}.j2  {% if use_nix %}devenv.nix{% endif %}.j2
src/devman/copier_templates/python-lib/.devman/: {{ _copier_conf.answers_file }}.j2
src/devman/templates/: .envrc.j2  Dockerfile.j2.txt  container.nix.j2.txt  devenv.nix.j2  docker-compose.yml.j2.txt  justfile.j2.txt  pyproject.toml.j2
src/devman/templates/fastapi-api/: copier.yml  {% if use_nix %}.envrc{% endif %}.j2
src/devman/templates/python-lib/: justfile.j2  pyproject.toml.j2  {% if use_just %}justfile{% endif %}.j2
src/devman/templates/python-lib/src/{{ package_name }}/: __init__.py.j2
src/devman/templates/python-lib/tests/: test_basic.py.j2
src/scripts/: bulk_copy_rename.py
src/tests/: conftest.py  devman.toml  run_tests.py  test_cli.py  test_config.py  test_devman_config.py  test_templater.py  test_templates.py
tests/: conftest.py  test_cli.py  test_config.py  test_integration.py  test_models.py  test_validation.py
