[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devman"
version = "0.1.0"
description = "Copier-powered project scaffolder (Python lib, CLI, FastAPI) with Nix/Docker/Just"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "copier>=9.2.0",
]

[project.scripts]
devman = "devman.cli:app"

[tool.black]
line-length = 100
